syntax = "proto3";
package module;

option go_package = "./proto";

message InputResult {
  string module_id = 1;
  bool success = 2;
}

enum ModuleType {
  SIMPLE_WIRES = 0;
  PASSWORD = 1;
}

enum BombFace {
  FRONT = 0;
  BACK = 1;
}

message ModuleState {
  string module_id = 1;
  ModuleType type = 2;
  BombFace face = 3;
  bool solved = 4;
}